# agent-infra

./: .gitignore  README.md  api.py  cli.py  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
agents/critic/: agent.py
agents/executor/: agent.py
agents/planner/: agent.py
agents/summarizer/: agent.py
config/: topics.py
core/: dspy_modules.py  kafka.py  memory.py  models.py
mcp_server/: server.py
ui/: index.html  package.json  vite.config.js
ui/src/: App.jsx  index.css
ui/src/components/: FinalAnswer.jsx  GoalInput.jsx  Header.jsx  MemorySearch.jsx  MetricsRow.jsx  PipelineStages.jsx  TaskFeed.jsx
